examples/neg/global_caps_captures.effekt
import bench

interface Exc { def throw(msg: String): Unit }
interface Console { def myprintln(msg: String): Unit }
interface Time { def now(): Int }

// console and time are "global" -- that is, module wide capabilities
def globalCapabilities { console: Console } { time: Time }: Unit = {
  def parallel(f: () => Unit at {}, g: () => Unit at {}): Unit = ()
  parallel(
      box { () => () },
      box { () => time.now(); console.myprintln("world!")  } // ERROR Not allowed {time, console}
  )
}

def run[T] { prog : {Console} {Time} => T }: T =
  try {
    prog {console} {time}
  } with console: Console {
    def myprintln(msg) = { println(msg); resume(()) }
  } with time: Time {
    def now() = resume(timestamp())
  }

def main() = run { globalCapabilities }
